# simpleKeychain2

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: backup.rs  constants.rs  crypto.rs  db.rs  export.rs  import.rs  main.rs  ui.rs  vault.rs
