[package]
name = "simpleKeychain2"
version = "0.2.7"
edition = "2024"
license = "MIT"

[features]
default = ["export", "import"]
export = []
import = []

[dependencies]
arboard = "3"
colored = "3"
argon2 = "0.5"
chacha20poly1305 = "0.10"
clap = { version = "4", features = ["derive"] }
dirs = "6"
rand = "0.8"
rpassword = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zeroize = { version = "1.8", features = ["alloc"] }
